--- a/milestones.yml
+++ b/milestones.yml
@@ -1,3 +1,4 @@
+# Just read the instructions and no matter what i do to you while configuring.. just remember: of course i still love you.
 testing-milestone:
   type: blockbreak
   conditions:
