--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
             <dependency>
                 <groupId>com.sk89q.worldguard</groupId>
                 <artifactId>worldguard-legacy</artifactId>
-                <version>6.1.2</version>
+                <version>6.2.2</version>
             </dependency>
         <dependency>
             <groupId>com.sk89q.worldedit</groupId>
@@ -57,6 +57,11 @@
             <artifactId>placeholderapi</artifactId>
             <version>2.0.6</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sk89q.worldguard</groupId>
+            <artifactId>worldguard-legacy</artifactId>
+            <version>6.1.2</version>
         </dependency>
     </dependencies>
 </project>
