--- a/src/resources/milestones.yml
+++ b/src/resources/milestones.yml
@@ -1,5 +1,6 @@
 # milestones.yml
 # It is possible to delete any section to disable it entirely.
+# If a boolean is deleted, the plugin will take it as 'false' value.
 
 # Whatever name you want.
 pvp:
@@ -29,18 +30,24 @@ pvp:
     targets:
       - PIG
     # Too see biome names, simply press F3..
+    # Possible biome names..
     biomes:
       - FOREST
       - PLAINS
     # Checks for region names the player is standing in. Requires WorldGuard..
+    # Player has to be at least in one of these..
     reions:
       - pvp_region
     # I think the description is a bit useless on some nodes..
+    # Possible world names, player has to be in at least one of these.. kinda makes sense.
     worlds:
       - world
-    # Items required to be in the inventory.
+    # Items required to be in the inventory, player has to have all of them
     in-inventory:
       - WHEAT
+    # Permission required, player has to have all of them.
+    permissions:
+      - 'some.made.up.permission'
   # Global  milestone means that the points are counted for all players.
   # The rewards don't work well with this, will improve.
   global-milestone: false
@@ -48,22 +55,32 @@ pvp:
   log-only-once: false
   rewards:
     # Commands to run by console.
-    commands:
-      - mi load Custom vy-fly-1h %player% 1
+    console-commands:
+      - msg %player% Uumf, you did it, congrats.
+    # Commands run by the player
+    player-commands:
+      - say I'm the greatest.
     # Items to give the player, won't work with full inv.
     # Not case sensitive, can use item placeholder.
     items:
       - aPPle
     # Message sent to the player.
     inform-message:
-      - '&cYou just killed an innocent pig.. GJ tho!'
+      - '&cYou just killed %milestoneScore%. innocent pig.. GJ!'
     # Message broadcasted to all.
     broadcast-message:
-      - '&c%player_name% is a pig killer! Congrats!'
+      - '&c%player% is a pig killer!'
   staged-rewards:
     # Count of points required to get the rewards.
     '10':
       # Same as basic rewards.
-      broadcast-message: '&f%player% &3hit &f10&3 scores in &f%milestone_name%&3!'
+      broadcast-message:
+        - '&f%player% &3hit &f10&3 scores in &f%milestoneName%&3!'
+      # Gives the reward
+      repeat: true
+      # Denies normal reward,.. the one that's given every time.
+      deny-normal: false
     '20':
-      broadcast-message: '&f%player% &3hit &f20&3 scores in &f%milestone_name%&3!'
+      broadcast-message:
+        - '&f%player% &3hit &f20&3 scores in &f%milestoneName%&3!'
+      repeat: false
