--- a/src/resources/plugin.yml
+++ b/src/resources/plugin.yml
@@ -1,9 +1,9 @@
 name: Milestones
-version: 1.0
+version: 1.1.2
 author: Wertik1206
 main: me.wertik.milestones.Main
-description: Logging data, doing some cool stuff
-softdepend: [PlaceholderAPI]
+description: Logging data based on conditions
+softdepend: [PlaceholderAPI, Vault]
 commands:
   milestones:
     aliases: [mile, miles]
