--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
-name: Milestones
-version: 2.0.0
+name: @name@
+version: @version@
 authors: [ qwz ]
-main: space.devport.wertik.milestones.MilestonesPlugin
+main: @main_class@
 description: Logging data based on conditions.
 softdepend: [ PlaceholderAPI, Vault ]
 commands:
