--- a/src/main/resources/milestones.yml
+++ b/src/main/resources/milestones.yml
@@ -9,7 +9,13 @@
 awesome-miner:
 
   # Milestone type.
-  # Options: kill, break, place, join, quit, chat
+  # Options:
+  # - Player: join, quit, chat (messages), fish, consume
+  # - Worlds: world_enter, world_leave (from)
+  # - Entity: kill (entities), trade (professions, results)
+  # - Blocks (blocks): break, place, harvest
+  # - WorldGuard: region_enter, region_leave
+  # - Shopkeepers: shopkeepers_trade
   type: break
 
   # Milestone display name
@@ -18,35 +24,21 @@ awesome-miner:
   # Conditions for the milestone score to count.
   conditions:
 
-    # Set item type, or an item from the datastorage.yml
-    # format: MATERIAL_NAME;DATA
-    # ex.: STONE;2
-    # Using datastorage to add item:
-    # Save item in-game using /miles addItem <itemName>
-    # Add to the list below with the following placeholder:
-    # %item_<itemName>%
-    # Can be used in tools, reward items and in-inventory.
-    # This section is also used with blockplace event.
     tools:
       - DIAMOND_PICKAXE
 
-    # Used to determine what type of block/entity or which message should count.
-    # break => block material
-    # kill => entity type
-    # chat => message
-    types:
+    blocks:
       - DIAMOND_ORE
       - GOLD_ORE
       - IRON_ORE
 
-    # Possible biomes to be in for the score to increase.
+    # Possible biomes to be in.
     biomes:
       - FOREST
       - PLAINS
 
-    # The name of a World Guard region the player has to be in.
-    # Requires WorldGuard installed.
-    reions:
+    # The name of a WorldGuard region the player has to be in.
+    regions:
       - pvp_region
 
     # Allowed worlds.
@@ -68,18 +60,20 @@ awesome-miner:
     commands:
       - 'p! me I mined something valuable!'
 
-    # After/Every x points...
-    cumulative:
-
+    # Every x points.
+    repeat:
       # Count of points required to get the rewards.
       '10':
         # These sections allow for same options as the base rewards.
 
-        broadcast-message:
+        broadcast:
           - '&f%player% &3hit &f10&3 scores in &f%milestoneName%&3!'
-
-        # Denies normal reward,.. the one that's given every time.
-        deny-base-reward: false
       '20':
-        broadcast-message:
+        broadcast:
           - '&f%player% &3hit &f20&3 scores in &f%milestoneName%&3!'
+
+    # After x points.
+    cumulative:
+      '10':
+        broadcast:
+          - ''
